--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,23 +1,29 @@
-{% extends 'bootstrap/base.html'%}
+{% extends 'base.html'%}
 
 
-{% block styles%}
+<!-- {% block styles%}
+{{ super() }}
     <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
-{% endblock %}
+{% endblock %} -->
 
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <h1 class="heachone">THE TOP HEADLINES</h1>
     </div>
     {% for title,desc,img_url,p_date,url in contents %}
-    <div class="container-fluid">
-        <div class="item"><a href="{{url}}"><img src="{{img_url}}" alt=""></a></div>
-        <div><a href="{{url}}"><h2>{{title}}</h2></a></div>
-        <div><a href="{{url}}"><p>{{desc}}</p></a></div>
-        <div><p>Publish Date:{{p_date}}</p></div>
-
+    <div class="card my-5">
+        <div class="card-title">
+            <a href="{{url}}"><img src="{{img_url}}" alt=""></a>
+        </div>
+        <div class="card-body">
+            <a href="{{url}}"><h2>{{title}}</h2></a>
+            <a href="{{url}}"><p>{{desc}}</p></a>
+        </div>
+        <div class="card-footer">
+            <p>Publish Date:{{p_date}}</p>
+        </div>
     </div>
     {% endfor %}
 
@@ -25,21 +31,18 @@
         <h2 class="heachone">TODAY'S NEWS</h2>
     </div>
     {% for title,desc,img_url,p_date,url in all %}
-    <div class="container-fluid">
-        <div class="item"><a href="{{url}}"><img src="{{img_url}}" alt=""></a></div>
-        <div><a href="{{url}}"><h2>{{title}}</h2></a></div>
-        <div><a href="{{url}}"><p>{{desc}}</p></a></div>
-        <div><p>Publish Date:{{p_date}}</p></div>
-
+    <div class="card">
+        <div class="card-title">
+            <a href="{{url}}"><img src="{{img_url}}" alt=""></a>
+        </div>
+        <div class="card-body">
+            <a href="{{url}}"><h2>{{title}}</h2></a>
+            <a href="{{url}}"><p>{{desc}}</p></a>
+        </div>
+        <div class="card-footer">
+            <p>Publish Date:{{p_date}}</p>
+        </div>
     </div>
     {% endfor %}
-
-
 </div>
-
-
-
-
-
-
 {% endblock %}
