--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
             <a href="{{url}}"><h2>{{title}}</h2></a>
             <a href="{{url}}"><p>{{desc}}</p></a>
         </div>
-        <div class="card-footer">
+        <div class="card-footer bg-dark text-light text-center">
             <p>Publish Date:{{p_date}}</p>
         </div>
     </div>
@@ -31,7 +31,7 @@
         <h2 class="heachone">TODAY'S NEWS</h2>
     </div>
     {% for title,desc,img_url,p_date,url in all %}
-    <div class="card">
+    <div class="card my-5">
         <div class="card-title">
             <a href="{{url}}"><img src="{{img_url}}" alt=""></a>
         </div>
@@ -39,7 +39,7 @@
             <a href="{{url}}"><h2>{{title}}</h2></a>
             <a href="{{url}}"><p>{{desc}}</p></a>
         </div>
-        <div class="card-footer">
+        <div class="card-footer bg-dark text-light text-center">
             <p>Publish Date:{{p_date}}</p>
         </div>
     </div>
