--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,5 +56,8 @@
         </div>
     </div>
     {% endfor %}
+    <footer>
+        <p class="text-center">made with love by Bambi</p>
+    </footer>
 </div>
 {% endblock %}
